tests/ui/issues/issue-24352.stderr
error[E0277]: cannot subtract `{integer}` from `f64`
  --> $DIR/issue-24352.rs:3:12
   |
LL |     1.0f64 - 1
   |            ^ no implementation for `f64 - {integer}`
   |
   = help: the trait `Sub<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Sub<Rhs>`:
             <f64 as Sub>
             <f64 as Sub<&f64>>
             <&'a f64 as Sub<f64>>
             <&f64 as Sub<&f64>>
help: consider using a floating-point literal by writing it with `.0`
   |
LL |     1.0f64 - 1.0
   |               ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
